--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,11 @@ find_package(Torch REQUIRED)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS})
 
-add_executable(main src/main.cpp)
+add_executable(main src/main.cpp
+                    include/neural_arch.h
+                    )
+
+target_include_directories(main PRIVATE include)
 
 target_link_libraries(main ${TORCH_LIBRARIES})
 
